Finish Project, issue: vertical scrollbar

--- a/ProductPreviewCardComponent/style.css
+++ b/ProductPreviewCardComponent/style.css
@@ -1,5 +1,6 @@
 :root {
   --clr-primary-400: hsl(158, 386%, 37%);
+  --clr-primary-500: hsl(158, 386%, 17%);
   --clr-secondary-200: hsl(30, 38%, 92%);
 
   --clr-neutral-800: hsl(212, 21%, 14%);
@@ -7,12 +8,15 @@
   --clr-neutral-100: hsl(0, 0%, 100%);
 
   /* font family */
-  --ff-accent: 'Fraunces', serif;
-  --ff-base: 'Montserrat', sans-serif;
+  --ff-accent: "Fraunces", serif;
+  --ff-base: "Montserrat", sans-serif;
 
   /* font weight */
   --fw-regular: 500;
   --fw-bold: 700;
+
+  /* font size */
+  --fs-regular: 0.9375rem;
 }
 
 /* css reset */
@@ -27,17 +31,14 @@
   margin: 0;
 }
 
-html,
-body {
+html {
   height: 100%;
 }
 
 body {
-  min-height: 100%;
-  line-height: 1.5;
+  line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
-  min-width: 100%;
 }
 
 input,
@@ -52,9 +53,109 @@ h1 {
   overflow: break-word;
 }
 
+h1 {
+  line-height: 1;
+}
+
 img {
   display: block;
   max-width: 100%;
+  width: 100%;
 }
 
 /* css reset */
+
+/* general styling */
+
+body {
+  box-sizing: border-box;
+  font-family: var(--ff-base);
+  font-weight: var(--fw-regular);
+  color: var(--clr-neutral-400);
+  font-size: var(--fs-regular);
+  background-color: var(--clr-secondary-200);
+
+  /* display */
+  margin: 1rem;
+  min-height: 100%;
+  display: grid;
+  place-content: center;
+}
+
+.flex-group {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.product {
+  max-width: 600px;
+  --content-padding: 1.5rem;
+  --content-spacing: 1rem;
+
+  display: grid;
+
+  background: var(--clr-neutral-100);
+  border-radius: 0.8rem;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 600px) {
+  .product {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.product__content {
+  padding: var(--content-padding);
+  display: grid;
+  gap: var(--content-spacing);
+}
+
+.product__category {
+  letter-spacing: 0.313rem;
+  text-transform: uppercase;
+}
+
+.product__title {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-neutral-800);
+}
+
+.product__price {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-primary-400);
+}
+
+.button {
+  cursor: pointer;
+  padding: 0.75em 1.5em;
+  text-decoration: none;
+  border: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: .75rem;
+
+  background-color: var(--clr-primary-400);
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-bold);
+  font-size: 0.925rem;
+  border-radius: 0.5rem;
+}
+
+.button[data-icon="shopping-cart"]::before {
+  content: "";
+  width: 15px;
+  height: 16px;
+  background-image: url('./images/icon-cart.svg');
+}
+
+.button:is(:hover, :focus) {
+  background-color: var(--clr-primary-500);
+}
+
+
